tests/baselines/reference/parser645086_2.errors.txt
==== tests/cases/compiler/parser645086_2.ts (3 errors) ====
    var v = /[^]/]/
                 ~
!!! parser645086_2.ts(1,14): error TS1005: ',' expected.
                  ~
!!! parser645086_2.ts(1,15): error TS1008: Unexpected token; 'identifier' expected.
                   
!!! parser645086_2.ts(1,16): error TS1005: 'expression' expected.